@@ -79,7 +79,9 @@ namespace roboptim
 	      {
 		x[0] = t;
 		Function::vector_t res = f (x);
-		str += (boost::format ("%1.2f %2.2f\n") % t % res [0]).str ();
+		str += (boost::format ("%1.2f %2.2f\n")
+			% normalize (t)
+			% normalize (res [0])).str ();
 	      }
 	    str += "e\n";
 	  }
@@ -106,7 +108,9 @@ namespace roboptim
 	  {
 	    x[0] = t;
 	    Function::vector_t res = f (x);
-	    str += (boost::format ("%1.2f %2.2f\n") % res[0] % res [1]).str ();
+	    str += (boost::format ("%1.2f %2.2f\n")
+		    % normalize (res[0])
+		    % normalize (res [1])).str ();
 	  }
 	str += "e\n";
 
